Semi automated cleanups.
PiperOrigin-RevId: 832073155