@@ -170,7 +170,7 @@ public class ImplementArraysAsClasses extends NormalizationPass {
   }
 
   /**
-   * Rewrites array operations to go throught the appropriate Java array abstraction type.
+   * Rewrites array operations to go through the appropriate Java array abstraction type.
    *
    * <p>For array length, accesses the field {@code WasmArray.length}. For accesses to an array
    * element, it accesses the element through the native array field of the abstraction class, e.g.
@@ -238,7 +238,7 @@ public class ImplementArraysAsClasses extends NormalizationPass {
   }
 
   /**
-   * Converts all array instatiations (NewArray and ArrayLiteral) to a call to the corresponding
+   * Converts all array instantiations (NewArray and ArrayLiteral) to a call to the corresponding
    * WasmArray class constructor to create the Java array abstraction of the proper type.
    *
    * <p>At this point all arrays initialized with more than one explicit dimension have been already
@@ -260,7 +260,7 @@ public class ImplementArraysAsClasses extends NormalizationPass {
             return MethodCall.Builder.from(
                     TypeDescriptors.getWasmArrayType(newArray.getTypeDescriptor())
                         .getMethodDescriptor("newWithLength", PrimitiveTypes.INT))
-                .setArguments(newArray.getDimensionExpressions().get(0))
+                .setArguments(newArray.getDimensionExpressions().getFirst())
                 .build();
           }
 
